yaml/service-nexus-registry.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus-registry
  namespace: nexus
  labels:
    app: docker-nexus3
    app.kubernetes.io/instance: docker-nexus-pipeline
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  sessionAffinity: ClientIP
  selector:
    app: docker-nexus3
  type: ClusterIP
