yaml/route-nexus-registry.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: docker-nexus3
  name: nexus-registry
spec:
  port:
    targetPort: 5000-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    name: nexus-registry
