yaml/route-nexus-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: docker-nexus3
  name: nexus-web
spec:
  port:
    targetPort: 8081-tcp
  tls:
    termination: edge
  to:
    name: nexus-web
